--- a/Frontend/public/assets/components/header.html
+++ b/Frontend/public/assets/components/header.html
@@ -1,12 +1,12 @@
-<header class="titanium-header">
+<header class="base-header">
     <div id="header-content" class="header-balanced-container">
-        <!-- ZONA SINISTRA: Navigazione / Profilo -->
+        <!-- ZONA SINISTRA: Navigazione (Es: Back Arrow) -->
         <div id="header-left" class="header-left"></div>
 
-        <!-- ZONA CENTRO: Titolo / Saluto -->
+        <!-- ZONA CENTRO: Titolo Pagina -->
         <div id="header-center" class="header-center"></div>
 
-        <!-- ZONA DESTRA: Azioni / Logout -->
+        <!-- ZONA DESTRA: Home / Azioni -->
         <div id="header-right" class="header-right"></div>
     </div>
 </header>
